# shelldown

./: .gitignore  INSTALL  LICENSE  Makefile.am  bootstrap.sh  configure.ac  implemented-api.md  readme.md
etc/: shelldown.ini
src/: Makefile.am  config.c  config.h  id-map.c  id-map.h  macros.h  main.c  mqtt.c  mqtt.h  shelly.c  shelly.h  shelly_plus1pm.c  shelly_plus2pm.c  shelly_plusi4.c
tst/: Makefile.am  config.c  main.c  mtest.h  test.ini
